# pic2map

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  dev_docker_build_img.sh  dev_docker_run_img.sh  dockerfile  prod_docker_run_img.sh  requirements.txt  requirements_test.txt  setup.cfg
docs/: conf.py
pic2map/: __init__.py  cli.py  db.py  fs.py  gps.py  util.py
pic2map/server/: __init__.py  app.py
pic2map/server/static/js/: leaflet.js  leaflet.markercluster.js  main.js
tests/: test_cli.py  test_db.py  test_fs.py  test_gps.py  test_util.py
tests/server/: test_app.py
