[metadata]
name = pic2map
version = attr: pic2map.VERSION
author = attr: pic2map.AUTHOR
author_email = attr: pic2map.AUTHOR_EMAIL
url = https://github.com/jsangmeister/pic2map
description = Display pictures location in a map
long_description = file: README.rst, HISTORY.rst
keywords = picture image photo map location gps
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    pic2map = pic2map
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt
tests_require = file: requirements_test.txt

[options.package_data]
pic2map = server/templates/*.html, server/static/*.css, server/static/*.js

[options.entry_points]
console_scripts =
    pic2map = pic2map.cli:main
